syntax = "proto3";

package kvraftpb;

enum Op {
    Unknown = 0;
    Put = 1;
    Append = 2;
}

/// Put or Append
message PutAppendRequest {
    string key = 1;
    string value = 2;
    // "Put" or "Append"
    Op op = 3;

    uint64 clientId = 4;
    uint64 requestId = 5;
}

message PutAppendReply {
    bool wrong_leader = 1;
    string err = 2;
}

message GetRequest {
    string key = 1;
    // You'll have to add definitions here.
}

message GetReply {
    bool wrong_leader = 1;
    string err = 2;
    string value = 3;
}

message KvLog {
    enum LogOp {
        Get = 0;
        Put = 1;
        Append = 2;
    }
    LogOp op = 1;
    string key = 2;
    string value = 3;
    uint64 clientId = 4;
    uint64 requestId = 5;
}
